hotfix: Fix overflow issue.

--- a/app/javascript/front/index.scss
+++ b/app/javascript/front/index.scss
@@ -121,9 +121,16 @@ hr {
 
 @media (min-width: 767px) {
   .navbar {
+    &-nav-scroll {
+      position: relative;
+      width: 100%;
+    }
+
     &.fixed-title {
       .navbar-topic-title {
+        z-index: 10;
         display: block;
+        width: 100%;
       }
       #main-nav-menu {
         display: none;
@@ -186,6 +193,9 @@ hr {
         padding: 0;
         font-size: 16px;
         line-height: 50px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
       }
     }
   }
